--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body >
 <h1>Alejandro Gómez Fierro</h1>
 <h3>Ingeniería informática</h3>
-	 <img id="informe"  src="informe.png" >
+	 <img id="informe"  src="comentario.png" >
 	 <img id="pagina" src="pagina.png">
 	 <img id="thanks" src="thanks.png">
 
